[package]
name = "data_tree"
authors = [ "James Hazlett <james@jameshazlett.com>" ]
description = "Hierarchical data tree with pathing and search support."
categories = [ "data-structures" ]
version = "0.1.0"
edition = "2021"
keywords = [ "data", "data_tree", "nodes", "strings", "tree" ]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jrhazlett/data_tree"

exclude = [
    ".DS_Store",
    ".git/*",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.154", features = ["derive"] }